--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,11 +169,13 @@ foreach(GLSL ${GLSL_SOURCE_FILES})
   add_custom_command(
     OUTPUT ${SPIRV}
     COMMAND ${GLSL_VALIDATOR} -V ${GLSL} -o ${SPIRV}
-    DEPENDS ${GLSL})
+    DEPENDS ${GLSL}
+    VERBATIM)
   list(APPEND SPIRV_BINARY_FILES ${SPIRV})
 endforeach(GLSL)
 
 add_custom_target(
     Shaders
+    ALL
     DEPENDS ${SPIRV_BINARY_FILES}
 )
